--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
+
 {
+  "homepage": "https://mudms.github.io/Portfolio-Website/",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "fas-web-ui-components": "^4.0.6",
+    "gh-pages": "^5.0.0",
     "nodemailer": "^6.9.3",
     "react": "^18.2.0",
     "react-confetti": "^6.1.0",
@@ -20,6 +23,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predepoly": "npm run build",    
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
